crates/macros/tests/ui/invalid_container.stderr
error: expected square brackets
  --> ./tests/ui/invalid_container.rs:22:45
   |
22 | #[charted_testkit_macros::test(containers = "litstr")]
   |                                             ^^^^^^^^

error: expected square brackets
  --> ./tests/ui/invalid_container.rs:27:45
   |
27 | #[charted_testkit_macros::test(containers = 123)]
   |                                             ^^^

error: expected a literal string, valid path to a function, or a function call
  --> ./tests/ui/invalid_container.rs:32:46
   |
32 | #[charted_testkit_macros::test(containers = [123])]
   |                                              ^^^

error: expected a literal string, valid path to a function, or a function call
  --> ./tests/ui/invalid_container.rs:37:46
   |
37 | #[charted_testkit_macros::test(containers = [true])]
   |                                              ^^^^
